# git

3D/: #notesOp.txt#
3D/practical1/: CMakeLists.txt
3D/practical1/cmake/: CMakeCache.txt
3D/practical1/include/: ConeRenderable.hpp  CubeRenderable.hpp  CubeRenderable.hpp~  CylinderRenderable.hpp  CylinderRenderable.hpp~  IndexedCubeRenderable.hpp  Renderable.hpp  ToreRenderable.hpp  ToreRenderable.hpp~  Viewer.hpp
3D/practical1/shaders/: #notes.txt#  flatFragment.glsl  flatVertex.glsl  flatVertex.glsl~  notes.txt  notes.txt~
3D/practical1/src/: CMakeLists.txt  ConeRenderable.cpp  ConeRenderable.cpp~  CubeRenderable.cpp  CylinderRenderable.cpp  CylinderRenderable.cpp~  IndexedCubeRenderable.cpp  Makefile  MeshRenderable.cpp  ToreRenderable.cpp  ToreRenderable.cpp~  Viewer.cpp  afficher_triangle.txt  afficher_triangle.txt~  main.cpp  main.cpp~
3D/practical2/practical2/: CylinderRenderable.cpp  CylinderRenderable.cpp~  CylinderRenderable.hpp  MeshRenderable.hpp
3D/practical3/include/: HierarchicalRenderable.hpp  ToreRenderable.hpp  Viewer.hpp
3D/practical3/src/: HierarchicalRenderable.cpp  HierarchicalRenderable.cpp~  ShaderProgram.cpp  ToreRenderable.cpp  Viewer.cpp  main.cpp  practical_03_scene.cpp  practical_03_scene.cpp~
3D/practical3/teachers/: CubeRenderable.hpp~  CylinderRenderable.hpp  CylinderRenderable.hpp~  IndexedCubeRenderable.hpp  MeshRenderable.cpp  MeshRenderable.hpp
C++/: #fiche.txt#  fiche.txt  fiche.txt~
C++/Snippets/: CMakeLists.txt  bash-s2.sh  makefile-s2  makefile-s3  makefile-s4  makefile-s5  makefile-s6  snippet-36.cxx  snippet-s10.cxx  snippet-s11.cxx  snippet-s11a.cxx  snippet-s11c.cxx  snippet-s12.cxx  snippet-s13.cxx  snippet-s14a.cxx  snippet-s14b.cxx  snippet-s15.cxx  snippet-s16a.cxx  snippet-s16b.cxx  snippet-s17.cxx  snippet-s19a.cxx  snippet-s19b.cxx  snippet-s20a.cxx  snippet-s20b.cxx  snippet-s21a.cxx  snippet-s21b.cxx  snippet-s22.cxx  snippet-s23.cxx  snippet-s24a.cxx  snippet-s24b.cxx  snippet-s25.cxx  snippet-s26.cxx  snippet-s26a.cxx  snippet-s26b.cxx  snippet-s26c.cxx  snippet-s27a.cxx  snippet-s27b.cxx  snippet-s27c.cxx  snippet-s27d.cxx  snippet-s28.cxx  (+13 more)
C++/TP1_steinhia/src/: Dvector  Dvector.cpp  Dvector.cpp~  Dvector.h  Dvector.h~
C++/TP2_delormeg_girardotc/: Makefile  README  analyse.txt
C++/TP2_delormeg_girardotc/doc/: Doxyfile  Makefile
C++/TP2_delormeg_girardotc/src/: Dvector.cpp  Dvector.h  Makefile  egal.cpp  egalTest  mainTest  test.cpp  test.cpp~
traitement_image/: fiche.txt  fiche.txt~
traitement_image/TP1/: #essai2.c#  Makefile  Makefile~  essai1  essai2  essai2.c  filtrage_gaussien  filtrage_gaussien.c  filtrage_gaussien.c~  formes1.pgm  formes1pets1.pgm  formes1pets10.pgm  formes1pets5.pgm  formes1sp.pgm  res.pgm  res2.pgm
(+54 files in other folders)
